clang/test/BSC/Trait/r1/definition_14.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

int get(trait F* f) {
  return 1;
};

int int::foo(int* this) {
  return 0;
}

impl trait F for int;

int main() {
  int a = 1;
  int b = get(a); // expected-error {{pointer type which has implemented 'trait F' or 'trait F*' is expected, but get 'int' here}}
                  // TODO:
  return 0;
}
